# img2vector

./: .gitignore  CMakeLists.txt  Makefile  README.md  opencv_utils.cpp
snap/: snapcraft.yaml
src/: main.cpp
